Added Lucas part of the Intro

--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
@@ -271,19 +271,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Introduction & Data Description\n",
+    "## Introduction\n",
+    "Understanding and predicting customer behavior is crucial for companies aiming to boost sales and drag interest. [Customer Personality Analysis](https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis) (CPA) is essential in helping a company to understand its customers and tailor their products to fit each customer's preferences. Previous studies has shown that targeted advertisements increases brand searches by 79% (Ayman, 2012). This highlights the importance of CPA in increasing a customer's interest towards the company. Though many past researches has studied on how targeted marketing through CPA affects the customers brand-related web searches, relationship between a customer’s personal data, purchasing habits, and their frequency of web purchases remains underexplored.\n",
     "\n",
-    "\"The assigned dataset for the project is the [Customer Personality Analysis](https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis) found on in this project, the code below show the descriptive summary of the dataset.\""
+    "This study aims to fill this knowledge deficit by answering the research question:\n",
+    "### <span style=\"color: red;\"> Can we predict a customer's number of web purchases based on their personal data and purchasing habits? </span>\n",
+    "By answering this question, we hope to indentify the dominant factors that influence online purchasing frequencies. Providing valuable influences and an effective model for businesses and companies looking to refine their marketing strategies."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Data Description\n",
+    "## Data Description\n",
     "\n",
-    "This dataset consists of marketing campaign data for a company, with 2,240 observations and 28 variables. The data captures various attributes about customers, including demographic information, purchase history, and responses to marketing campaigns and purchase history.\n",
+    "To answer this question, we will be using the Customer Personality Analysis dataset provided by Dr. Omar Romero-Hernandez.\n",
+    "The customer personality analysis is a dataset that links customer's status with their purchase patterns. There are a total of 2240 observations and 28 variables split into 4 groups. **The method of collection was not specified**\n",
+    "- People, the personal data of customer.\n",
+    "- Products, the amount customer spent on a certain type of product in the last 2 years\n",
+    "- Promotion, whether or not customers participated in past promotions/discounts\n",
+    "- Place, where and amount the customer made the purchase\n",
     "\n",
+    "The details of each columns are as followed\n",
     "| **Variable Name**       | **Type**     | **Description**                                               |\n",
     "|-------------------------|--------------|---------------------------------------------------------------|\n",
     "| `ID`                    | Count Data   | Unique identifier for each customer                           |\n",
@@ -323,7 +332,8 @@
     "\n",
     "<span style=\"color: magenta;\"> `Z_CostContact`, `Z_Revenue` will be dropped in Data Wrangling, since there were no description on these 2 columns. </span>\n",
     "\n",
-    "**Data Source**: The dataset was collected as part of a marketing campaign analysis by Dr. Omar Romero-Hernandez. https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n"
+    "**Data Source**: https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n",
+    "The data was provided by Dr. Omar Romero-Hernandez of UC Berkeley. "
    ]
   },
   {
