Added the Data Wrangling from @LucassHo

--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -333,7 +333,127 @@
     "<span style=\"color: magenta;\"> `Z_CostContact`, `Z_Revenue` will be dropped in Data Wrangling, since there were no description on these 2 columns. </span>\n",
     "\n",
     "**Data Source**: https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n",
+    "\n",
     "The data was provided by Dr. Omar Romero-Hernandez of UC Berkeley. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Data Wrangling\n",
+    "\n",
+    "The following are the steps taken to clean and prepare our data\n",
+    "\n",
+    "1. Dropped 24 rows where na values were found in `Income`.\n",
+    "2. Convert all `2n Cycle` values in `Education` to `Master`, as they are [equivalent](https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/discussion/466400).\n",
+    "3. Converted all awkwardly named values in `Marital_Status` to `Single`.\n",
+    "4. Remove the columns `Z_CostContact`, `Z_Revenue` and `ID`, as they do not contribute to our analysis.\n",
+    "5. Converting `Education`, `Marital_Status` and `Dt_Customer` to their appropriate types.\n",
+    "6. Renamed Response to `AcceptedPrevCmp` to avoid confusion.\n",
+    "7. Log-transformed Income to avoid outliers and improve linearity\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Number of NAs by column before cleaning:\"\n",
+      "                 ID          Year_Birth           Education      Marital_Status \n",
+      "                  0                   0                   0                   0 \n",
+      "             Income             Kidhome            Teenhome         Dt_Customer \n",
+      "                 24                   0                   0                   0 \n",
+      "            Recency            MntWines           MntFruits     MntMeatProducts \n",
+      "                  0                   0                   0                   0 \n",
+      "    MntFishProducts    MntSweetProducts        MntGoldProds   NumDealsPurchases \n",
+      "                  0                   0                   0                   0 \n",
+      "    NumWebPurchases NumCatalogPurchases   NumStorePurchases   NumWebVisitsMonth \n",
+      "                  0                   0                   0                   0 \n",
+      "       AcceptedCmp3        AcceptedCmp4        AcceptedCmp5        AcceptedCmp1 \n",
+      "                  0                   0                   0                   0 \n",
+      "       AcceptedCmp2            Complain       Z_CostContact           Z_Revenue \n",
+      "                  0                   0                   0                   0 \n",
+      "           Response \n",
+      "                  0 \n",
+      "[1] \"Number of NAs by column after cleaning:\"\n",
+      "                 ID          Year_Birth           Education      Marital_Status \n",
+      "                  0                   0                   0                   0 \n",
+      "             Income             Kidhome            Teenhome         Dt_Customer \n",
+      "                  0                   0                   0                   0 \n",
+      "            Recency            MntWines           MntFruits     MntMeatProducts \n",
+      "                  0                   0                   0                   0 \n",
+      "    MntFishProducts    MntSweetProducts        MntGoldProds   NumDealsPurchases \n",
+      "                  0                   0                   0                   0 \n",
+      "    NumWebPurchases NumCatalogPurchases   NumStorePurchases   NumWebVisitsMonth \n",
+      "                  0                   0                   0                   0 \n",
+      "       AcceptedCmp3        AcceptedCmp4        AcceptedCmp5        AcceptedCmp1 \n",
+      "                  0                   0                   0                   0 \n",
+      "       AcceptedCmp2            Complain       Z_CostContact           Z_Revenue \n",
+      "                  0                   0                   0                   0 \n",
+      "           Response \n",
+      "                  0 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Main Developer: Lucas\n",
+    "# Contributors: Lucas, Eaven (debugged/collate)\n",
+    "\n",
+    "## Step 1\n",
+    "print(\"Number of NAs by column before cleaning:\")\n",
+    "print(colSums(is.na(market_data)))\n",
+    "market_data <- market_data |> filter(!is.na(Income))\n",
+    "print(\"Number of NAs by column after cleaning:\")\n",
+    "print(colSums(is.na(market_data)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "vscode": {
+     "languageId": "r"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1] \"Before:\"\n",
+      "\n",
+      "  2n Cycle      Basic Graduation     Master        PhD \n",
+      "       200         54       1116        365        481 \n",
+      "[1] \"After:\"\n",
+      "\n",
+      "     Basic Graduation     Master        PhD \n",
+      "        54       1116        565        481 \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Main Developer: Lucas\n",
+    "# Contributors: Lucas, Eaven (debugged/collate)\n",
+    "\n",
+    "# Step 2\n",
+    "print(\"Before:\")\n",
+    "print(table(market_data$Education))\n",
+    "market_data <- market_data %>%\n",
+    "    mutate(Education = case_when(\n",
+    "        Education == \"2n Cycle\" ~ \"Master\",\n",
+    "        TRUE ~ Education\n",
+    "    ))\n",
+    "print(\"After:\")\n",
+    "print(table(market_data$Education))"
    ]
   },
   {
