--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -1359,13 +1359,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "r"
     }
    },
    "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\n",
+       "Call:\n",
+       "glm(formula = NumWebPurchases ~ . - Year_Birth - Education - \n",
+       "    Marital_Status - Dt_Customer - Recency - MntMeatProducts - \n",
+       "    NumCatalogPurchases - AcceptedCmp1 - Complain, family = quasipoisson, \n",
+       "    data = training_market)\n",
+       "\n",
+       "Coefficients:\n",
+       "                    Estimate Std. Error t value Pr(>|t|)    \n",
+       "(Intercept)       -4.490e+00  6.330e-01  -7.093 1.94e-12 ***\n",
+       "Kidhome           -2.341e-01  3.699e-02  -6.330 3.15e-10 ***\n",
+       "Teenhome           4.460e-02  3.151e-02   1.416   0.1571    \n",
+       "MntWines           3.157e-04  6.175e-05   5.112 3.56e-07 ***\n",
+       "MntFruits          1.426e-04  4.079e-04   0.350   0.7267    \n",
+       "MntFishProducts    4.737e-04  3.085e-04   1.535   0.1249    \n",
+       "MntSweetProducts   8.278e-04  3.854e-04   2.148   0.0319 *  \n",
+       "MntGoldProds       1.759e-03  2.679e-04   6.567 6.88e-11 ***\n",
+       "NumDealsPurchases  4.946e-02  7.782e-03   6.356 2.68e-10 ***\n",
+       "NumStorePurchases  3.715e-02  5.786e-03   6.421 1.77e-10 ***\n",
+       "NumWebVisitsMonth  9.424e-02  8.876e-03  10.617  < 2e-16 ***\n",
+       "AcceptedCmp3       3.522e-02  5.264e-02   0.669   0.5035    \n",
+       "AcceptedCmp4      -4.248e-02  5.232e-02  -0.812   0.4169    \n",
+       "AcceptedCmp5      -5.722e-02  5.770e-02  -0.992   0.3215    \n",
+       "AcceptedCmp2      -1.969e-01  1.100e-01  -1.791   0.0735 .  \n",
+       "AcceptedPrevCmp    8.500e-02  4.024e-02   2.112   0.0348 *  \n",
+       "LogIncome          4.464e-01  5.818e-02   7.673 2.87e-14 ***\n",
+       "---\n",
+       "Signif. codes:  0 ‘***’ 0.001 ‘**’ 0.01 ‘*’ 0.05 ‘.’ 0.1 ‘ ’ 1\n",
+       "\n",
+       "(Dispersion parameter for quasipoisson family taken to be 1.275245)\n",
+       "\n",
+       "    Null deviance: 2982.0  on 1661  degrees of freedom\n",
+       "Residual deviance: 1414.4  on 1645  degrees of freedom\n",
+       "AIC: NA\n",
+       "\n",
+       "Number of Fisher Scoring iterations: 5\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "data": {
       "text/plain": [
@@ -1418,7 +1462,8 @@
     "    formula = NumWebPurchases ~ . -Year_Birth -Education -Marital_Status -Dt_Customer -Recency -MntMeatProducts -NumCatalogPurchases -AcceptedCmp1 -Complain,\n",
     "    data = training_market,\n",
     "    family = quasipoisson))\n",
-    "poisson_quasi # View the dispersion parameter"
+    "poisson_quasi # View the dispersion parameter\n",
+    "\n"
    ]
   },
   {
@@ -1430,7 +1475,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "metadata": {
     "vscode": {
      "languageId": "r"
