--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -1616,8 +1616,17 @@
     "\n",
     "1. Lehmann, Johannes, and Michael Beckmann. 2025. “Digital Technologies and Performance Incentives: Evidence from Businesses in the Swiss Economy.” Swiss Journal of Economics and Statistics 161 (1): 1. https://doi.org/10.1186/s41937-024-00132-3.\n",
     "\n",
-    "2. Farahat, A., & Bailey, M. C. (2012). How effective is targeted advertising? Proceedings of the 21st International Conference on World Wide Web. https://doi.org/10.1145/2187836.2187852 \n"
+    "2. Farahat, A., & Bailey, M. C. (2012). How effective is targeted advertising? Proceedings of the 21st International Conference on World Wide Web. https://doi.org/10.1145/2187836.2187852\n",
+    "\n",
+    "3. testing\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
