--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -5,7 +5,7 @@
    "metadata": {},
    "source": [
     "## STAT301 2024W2 Group 26 Project \n",
-    "</br> *Eaven (23540214), Lucas (53427739), Rahul (25650656), Aryan ()*\n",
+    "</br> *Eaven (23540214), Lucas (53427739), Rahul (25650656), Aryan (93035657)*\n",
     "\n",
     "2025-04-12 <br>\n",
     "\n",
