--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -1162,9 +1162,9 @@
    "source": [
     "## Variable Selection in `market_data`\n",
     "\n",
-    "Regularisation in Generalised Linear Models (GLMs) uses *shrinkage methods* which can be deployed for both logistic and Poisson Regression. Regularisation is used to improve predictive models where some biases are introduced in exchange for the reduction of the model's variance. LASSO and Ridge Regression **may** be used for variable selection. For this project, LASSO regression performs variable selection by ***shrinking*** some coefficients ($\\lambda = 0$), which it excludes less important predictors from the model. This will allows us to pick variables that are useful for our analyses. Given that the project are primarilly focus on building a strong predictive models. Hence, this justify the reason for using only LASSO as the only variable selection method instead of incorporating both LASSO and Ridge Regression.\n",
+    "Regularisation in Generalised Linear Models (GLMs) uses *shrinkage methods* which can be deployed for both logistic and Poisson Regression. Regularisation is used to improve predictive models where some biases are introduced in exchange for the reduction of the model's variance. LASSO Regression **may** be used for variable selection. For this project, LASSO regression performs variable selection by ***shrinking*** some coefficients ($\\lambda = 0$), where it excludes less important predictors from the model. This will allow us to pick variables that are useful for our analyses. Given that the project is primarily focused on building a strong predictive model, which justifies the reason for using only LASSO as our variable selection method.\n",
     "\n",
-    "The code below shows the LASSO Regression for Poisson Model.  Ridge regression shrinks all coefficients but all covariates/predictors are still **retained** even covariates with small effects which sets it apart from LASSO."
+    "The code below shows the LASSO Regression for the Poisson Model.  Ridge regression shrinks all coefficients but all covariates/predictors are still **retained** even covariates with small effects which sets it apart from LASSO."
    ]
   },
   {
@@ -1252,7 +1252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From `lasso_coefs`, `LogIncome` is the strongest postive covariates, which suggests that wealthier customer purchase more online. `KidHome` is a covariates where households with kids (`Kidhome`) tend to buy less, while those with `Teenhome` buy slightly more which implies that households with teenagers are likely to purchase more stuffs such as textbook suppliers, technology (e.g. laptops, mobile phone etc.) Nonetheless, customers who visit the website more (`NumWebVisitsMonth`) are more likely to purchase which is expected, since engagement leads to conversions. \n",
+    "From `lasso_coefs`, `LogIncome` is the strongest positive covariate, which suggests that wealthier customers purchase more online. `KidHome` is a covariate from which we can see that households with kids (`Kidhome`) tend to buy less, while those with `Teenhome` buy slightly more which implies that households with teenagers are likely to purchase more products such as textbook supplies, technology (e.g. laptops, mobile phone, etc.) Customers who visit the website more (`NumWebVisitsMonth`) are more likely to purchase which is expected since increased engagement generally leads to conversions. \n",
     "\n"
    ]
   },
