--- a/STAT301 Grp 26 Project Final.ipynb
+++ b/STAT301 Grp 26 Project Final.ipynb
@@ -294,14 +294,6 @@
     "| `Z_Revenue` | Numeric | Not Given |\n",
     "| `Response` | Binary | 1 if the customer accepted the 2nd campaign, 0 otherwise |\n",
     "\n",
-    "\n",
-    "\n",
-    "*Given that `Dt_Customer` can be manipulated within the tidyverse library in*\n",
-    "```r \n",
-    "library(lubridate)\n",
-    "```\n",
-    "*Hence, I have classified it as a `Date` type in the Data Type.* \n",
-    "\n",
     "**Data Source**: https://www.kaggle.com/datasets/imakash3011/customer-personality-analysis/data\n",
     "\n",
     "The data was provided by Dr. Omar Romero-Hernandez of UC Berkeley. "
@@ -1312,7 +1304,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spending on different product categories (wine, sweets, fruits, fish, gold products) has a positive correlation with `WebPurchases`, thereby meaning higher spenders in one area may be more inclined to shop online. \n",
+    "Spending on different product categories (wine, sweets, fruits, fish, gold products) has a positive correlation with `NumWebPurchases`, thereby meaning higher spenders in one area may be more inclined to shop online. \n",
     "Marketing campaign acceptance has varied effects. Some campaigns increased purchases (`AcceptedCmp3`, `AcceptedPrevCmp`), while others reduced engagement (`AcceptedCmp2`, `AcceptedCmp5`). Thus, this suggests that some promotions may worked better than others."
    ]
   },
